[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/game map.png" type="Texture" id=1]
[ext_resource path="res://scripts/Main_menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/Game_font.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
margin_right = 1025.0
margin_bottom = 601.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -427.0
margin_top = -267.0
margin_right = 1891.0
margin_bottom = 1170.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 241.966
margin_top = -38.636
margin_right = 865.966
margin_bottom = 540.364
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="Button" parent="."]
margin_left = 405.298
margin_top = 442.308
margin_right = 594.298
margin_bottom = 527.308
rect_pivot_offset = Vector2( 65.6321, 60.0131 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="."]
margin_left = 773.685
margin_top = 438.409
margin_right = 962.685
margin_bottom = 523.409
rect_pivot_offset = Vector2( 65.6321, 60.0131 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 38.2487
margin_top = 440.323
margin_right = 227.249
margin_bottom = 525.323
rect_pivot_offset = Vector2( 65.6321, 60.0131 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
margin_left = 403.527
margin_top = 327.483
margin_right = 592.527
margin_bottom = 412.483
rect_pivot_offset = Vector2( 65.6321, 60.0131 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
